yourhormones.info (archived on 2014-02-20)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 8617,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.45,
  "homepage_snapshot_redirected_domain": "yourhormones.info",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140209043950id_/http://www.yourhormones.info/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140209043950id_/http%3A//yourhormones.info",
  "interval": "2014_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "endocrinology.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140220201053id_/http%3A//www.endocrinology.org/site/privacy.html",
  "policy_title": "Society for Endocrinology | Disclaimer",
  "policy_url": "endocrinology.org/site/privacy.html",
  "sha1": "077fd30bb2daa855e50af96695a47cffcee83b41",
  "simhash": 15058960792834502970,
  "simhash_updated": false,
  "site_hostname": "yourhormones.info",
  "site_url": "http://yourhormones.info",
  "smog": 16.2,
  "strict_updated": false,
  "timestamp": "20140220201053",
  "word_count": 1337,
  "year": 2014
}

--- a/y/yo/you/yourhormones.info.html
+++ b/y/yo/you/yourhormones.info.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yourhormones.info privacy policy that was archived on 2013-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131121030046id_/http%3A//www.endocrinology.org/site/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yourhormones.info privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220201053id_/http%3A//www.endocrinology.org/site/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 		<title>Society for Endocrinology | Disclaimer</title>
@@ -9,7 +9,7 @@
 		<meta name="vs_targetSchema" content="http://schemas.microsoft.com/intellisense/ie5">
 	    	    <link href="../css/endocrinology3.css" rel="stylesheet" type="text/css">		
 	    <link media="print" href="../css/sfeprint.css" rel="stylesheet" type="text/css">			
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="../jsscripts/cookiejar.js"></script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script src="../jsscripts/cookiejar.js"></script>
 <script src="../jsscripts/accessibility.js"></script>
 <script src="../jsscripts/mainfunc.js"></script>
 	</head>
@@ -20,8 +20,39 @@
 	<div id="Wrapper" style="font-size: 100%;">
 	<!-------------------------------------------------------------><!-- #BeginLibraryItem "/Library/Header.lbi" -->
 
-<div id="newEra">
-	<a href="/new-era/index.aspx"><img src="/new-era/banner-new-era.jpg" alt="New Era" width="950" height="94" border="0"></a><br>
+<script type="text/javascript">
+var googletag = googletag || {};
+googletag.cmd = googletag.cmd || [];
+(function() {
+var gads = document.createElement('script');
+gads.async = true;
+gads.type = 'text/javascript';
+var useSSL = 'https:' == document.location.protocol;
+gads.src = (useSSL ? 'https:' : 'http:') + 
+'//www.googletagservices.com/tag/js/gpt.js';
+var node = document.getElementsByTagName('script')[0];
+node.parentNode.insertBefore(gads, node);
+})();
+</script>
+
+<script type="text/javascript">
+googletag.cmd.push(function() {
+googletag.defineSlot('/72312458/SFE-Top_970x90', [970, 90], 'div-gpt-ad-1387297385721-0').addService(googletag.pubads());
+googletag.pubads().enableSingleRequest();
+googletag.enableServices();
+});
+</script>
+
+
+<div id="globalBanner">
+
+<!-- SFE-Top_970x90 -->
+<div id="div-gpt-ad-1387297385721-0" style="width:970px; height:90px;">
+<script type="text/javascript">
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1387297385721-0'); });
+</script>
+</div>
+<!--	<a href="/news/docs/SfE_YearInReview.pdf" target="_blank" onClick="_gaq.push(['_trackEvent', 'Downloads', 'PDF', '/news/docs/SfE_YearInReview.pdf']);"><img src="/gfx/globalBanner/YearInReview_970x90.jpg" alt="Society for Endocrinology BES 2014" width="970" height="90" border="0"></a><br>-->
 </div>
 
 <div id="Header">  
