marketwallpapers.com (archived on 2014-02-21)
{
  "alexa_rank": 154611,
  "analysis_subcorpus": true,
  "categories": "entertainment;mediasharing",
  "char_count": 2691,
  "classifier_probability": 0.78,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.76,
  "homepage_snapshot_redirected_domain": "marketwallpapers.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140221000857id_/http://www.marketwallpapers.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140221000857id_/http%3A//marketwallpapers.com",
  "interval": "2014_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "marketwallpapers.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140221000841id_/http%3A//www.marketwallpapers.com/privacy.html",
  "policy_title": "Full HD wallpaper and background images",
  "policy_url": "marketwallpapers.com/privacy.html",
  "sha1": "74c88a870ffc76625d1488c87f0d78f5c5d0b857",
  "simhash": 7384457388028356752,
  "simhash_updated": false,
  "site_hostname": "marketwallpapers.com",
  "site_url": "http://marketwallpapers.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20140221000841",
  "word_count": 441,
  "year": 2014
}

--- a/m/ma/mar/marketwallpapers.com.html
+++ b/m/ma/mar/marketwallpapers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marketwallpapers.com privacy policy that was archived on 2013-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131231215223id_/http%3A//www.marketwallpapers.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marketwallpapers.com privacy policy that was archived on 2014-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140221000841id_/http%3A//www.marketwallpapers.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
@@ -92,7 +92,8 @@ google_ad_height = 15;
 <div style="padding-top:10px;">
 	<!-- <div><img src="/img/categories-label.gif" /></div> -->
 	<div><img src="/img/resolutions.gif" alt="Resolution images"></div>
-	<ul class="sections"><li><img src="/img/a.gif" alt="150x150"><a href="/srch-wallpapers/resolution-150x150/page-1.html">150 x 150 wallpapers </a></li>
+	<ul class="sections"><li><img src="/img/a.gif" alt="149x93"><a href="/srch-wallpapers/resolution-149x93/page-1.html">149 x 93 wallpapers </a></li>
+			<li><img src="/img/a.gif" alt="150x150"><a href="/srch-wallpapers/resolution-150x150/page-1.html">150 x 150 wallpapers </a></li>
 			<li><img src="/img/a.gif" alt="600x375"><a href="/srch-wallpapers/resolution-600x375/page-1.html">600 x 375 wallpapers </a></li>
 			<li><img src="/img/a.gif" alt="600x480"><a href="/srch-wallpapers/resolution-600x480/page-1.html">600 x 480 wallpapers </a></li>
 			<li><img src="/img/a.gif" alt="640x360"><a href="/srch-wallpapers/resolution-640x360/page-1.html">640 x 360 wallpapers </a></li>
