--- a/b/bc/bc./bc.vc.html
+++ b/b/bc/bc./bc.vc.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bc.vc privacy policy that was archived on 2013-09-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130901005030id_/http%3A//www.bc.vc/privacy.en.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bc.vc privacy policy that was archived on 2014-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140221091651id_/http%3A//www.bc.vc/privacy.en.php) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head> 
 	<title>bc.vc - a modern URL shortener</title>
@@ -278,7 +278,7 @@ Your browser currently does not support javascript or you have javascript turned
 				<a href="privacy.en.php">Privacy</a> | 
 				<a href="terms.en.php">Terms</a> | 
 				<a href="faq.en.php">FAQ</a> | 
-				<a href="http://kb.bc.vc/">Contact</a>
+				<a href="http://bc.vc/contact.php">Contact</a>
 			</span>
 			<div style="clear:both;"></div>
 		</div>
