tgdaily.com (archived on 2014-02-21)
{
  "alexa_rank": 67990,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 7871,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.99,
  "homepage_snapshot_redirected_domain": "tgdaily.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140331222728id_/http://www.tgdaily.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140331222728id_/http%3A//tgdaily.com",
  "interval": "2014_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "tgdaily.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140221091655id_/http%3A//www.tgdaily.com/privacy",
  "policy_title": "Privacy Policy | TG Daily",
  "policy_url": "tgdaily.com/privacy",
  "sha1": "696e9c3d99f00c4bed3f71ab55f51cdd78561967",
  "simhash": 9479040057689235088,
  "simhash_updated": false,
  "site_hostname": "tgdaily.com",
  "site_url": "http://tgdaily.com",
  "smog": 15.11,
  "strict_updated": false,
  "timestamp": "20140221091655",
  "word_count": 1291,
  "year": 2014
}

--- a/t/tg/tgd/tgdaily.com.html
+++ b/t/tg/tgd/tgdaily.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the tgdaily.com privacy policy that was archived on 2013-11-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131109040436id_/http%3A//www.tgdaily.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tgdaily.com privacy policy that was archived on 2014-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140221091655id_/http%3A//www.tgdaily.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://ogp.me/ns#" prefix="og: http://ogp.me/ns#"><head>
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-dns-prefetch-control" content="on">
@@ -23,7 +23,6 @@
 <link rel="canonical" href="http://www.tgdaily.com/privacy">
 <meta name="revisit-after" content="1 day">
 <meta name="author" content="themaster">
-<meta http-equiv="Content-Language" content="en">
 <link rel="shortcut icon" href="http://static.tgdaily.com/favicon.ico" type="image/ico">
 <link rel="apple-touch-icon" href="/apple-touch-icon-114.png" sizes="57x57">
 <link rel="apple-touch-icon" href="/apple-touch-icon-114.png" sizes="114x114">
@@ -31,17 +30,18 @@
 <link rel="apple-touch-icon" href="/apple-touch-icon-144.png" sizes="144x144">
 <link rel="image_src" href="http://www.tgdaily.com/sites/default/files/imagecache/original/">
 <link rel="publisher" href="https://plus.google.com/109099617272000206503">
+<meta name="application-name" content="tgdailyimages" data-searchimage="http://www.tgdaily.com/sites/default/files/imagecache/tgniob-searchteaser/">
 <meta property="og:site_name" content="TG Daily">
 <meta property="og:image" content="http://www.tgdaily.com/sites/default/files/imagecache/original/">
 <meta property="og:description" content="TG Daily Privacy Policy
 TG Daily is committed to ensuring the privacy of its readers and registered members and wants you to fully understand our terms and conditions. This privacy statement ...">
 <meta property="fb:admins" content="100005985961592">
 <script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0014/2838.js?438989" async="" type="text/javascript"></script><script async="" src="http://track.netshelter.net/async/js/sites/tgdaily.com-async.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js?onload=onLoadCallback"></script><script type="text/javascript" async="" src="http://i.po.st/static/script/post-widget.js#publisherKey=g98hrvtd68esgcdq0b0r"></script><script type="text/javascript" async="" src="https://platform.stumbleupon.com/1/widgets.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var windowOnload=window.onload||function(){};window.onload=function(){windowOnload();};var _sf_startpt=(new Date()).getTime();var addthis_config={ui_use_css:false};var OA_source='general';</script>
-<link type="text/css" rel="stylesheet" media="all" href="http://static.tgdaily.net/sites/default/files/advagg_css/css_404f61602b56a10fab4c987ce85491fa_125.css">
-<script type="text/javascript" src="http://vma.tgdaily.net/www/delivery/spc_vma_async.php?jsfunc=2&amp;id=1&amp;source=general&amp;r=56398152&amp;loc=http%3A%2F%2Fwww.tgdaily.com%2Fprivacy&amp;referer=http%3A%2F%2Fwww.tgdaily.com%2F"></script>
+<link type="text/css" rel="stylesheet" media="all" href="http://static.tgdaily.net/sites/default/files/advagg_css/css_404f61602b56a10fab4c987ce85491fa_131.css">
+<script type="text/javascript" src="http://vma.tgdaily.net/www/delivery/spc_vma_async.php?jsfunc=2&amp;id=1&amp;source=general&amp;r=79842242&amp;loc=http%3A%2F%2Fwww.tgdaily.com%2Fprivacy"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="http://static.tgdaily.net/sites/default/files/advagg_js/js_2f205b398ba276ac9423fdb5c234dc99_0.js"></script>
-<script type="text/javascript" src="http://static.tgdaily.net/sites/default/files/advagg_js/js_fdae53f7f9acc6184d6a85fbbe6f37a2_2.js"></script>
+<script type="text/javascript" src="http://static.tgdaily.net/sites/default/files/advagg_js/js_55fe43f18315f4f7ab4c6064857a68bc_0.js"></script>
+<script type="text/javascript" src="http://static.tgdaily.net/sites/default/files/advagg_js/js_9c8b7996098b4ca060db44921c6529b4_0.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","datetweaks":{"use_dropdown":true}});
@@ -83,18 +83,26 @@ var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s)
 <li class="leaf"><a href="/business" title="Business">Business</a></li>
 <li class="leaf"><a href="/science" title="Science">Science</a></li>
 <li class="leaf"><a href="/entertainment" title="Entertainment">Entertainment</a></li>
-<li class="leaf"><a href="http://diytech.tgdaily.com/" title="">DIY Tech</a></li>
-<li class="leaf"><a href="http://3dprinting.tgdaily.com" title="">3D Printing</a></li>
-<li class="expanded"><a href="#" class="nolink">More</a><ul class="menu"><li class="leaf first"><a href="http://bigdata.tgdaily.com/" title="">Big Data</a></li>
-<li class="leaf"><a href="http://cleantech.tgdaily.com/" title="">Clean Tech</a></li>
-<li class="leaf"><a href="http://dataviz.tgdaily.com/" title="">Data Viz</a></li>
-<li class="leaf"><a href="http://gis.tgdaily.com/" title="">GIS</a></li>
-<li class="leaf"><a href="http://hackers.tgdaily.com/" title="">Hackers</a></li>
-<li class="leaf"><a href="http://math.tgdaily.com/" title="">Math</a></li>
-<li class="leaf"><a href="http://openhardware.tgdaily.com/" title="">Open Hardware</a></li>
-<li class="leaf"><a href="http://science.tgdaily.com/" title="">Science</a></li>
-<li class="leaf"><a href="http://security.tgdaily.com/" title="">Security</a></li>
-<li class="leaf last"><a href="http://typography.tgdaily.com/" title="">Typography</a></li>
+<li class="leaf"><a href="/diy-tech">DIY Tech</a></li>
+<li class="leaf"><a href="/3d-printing">3D Printing</a></li>
+<li class="expanded"><a href="#" class="nolink">More</a><ul class="menu"><li class="leaf first"><a href="/augmented-reality">Augmented Reality</a></li>
+<li class="leaf"><a href="/big-data">Big Data</a></li>
+<li class="leaf"><a href="/clean-tech">Clean Tech</a></li>
+<li class="leaf"><a href="/data-viz">Data Viz</a></li>
+<li class="leaf"><a href="/electric-vehicles">Electric Vehicle</a></li>
+<li class="leaf"><a href="/gis">GIS</a></li>
+<li class="leaf"><a href="/hackers">Hackers</a></li>
+<li class="leaf"><a href="/it-for-dev">IT4Dev</a></li>
+<li class="leaf"><a href="/math">Math</a></li>
+<li class="leaf"><a href="/neuroscience">Neuroscience</a></li>
+<li class="leaf"><a href="/open-hardware">Open Hardware</a></li>
+<li class="leaf"><a href="/robotics">Robotics</a></li>
+<li class="leaf"><a href="/science">Science</a></li>
+<li class="leaf"><a href="/security">Security</a></li>
+<li class="leaf"><a href="/semiconductors">Semiconductors</a></li>
+<li class="leaf"><a href="/smartphones">Smartphones</a></li>
+<li class="leaf"><a href="/typography">Typography</a></li>
+<li class="leaf last"><a href="/ux-ui">UX/UI</a></li>
 </ul></li>
 <li class="leaf"><a href="http://facebook.com/tgdaily" title="TG Daily on Facebook" id="fb" class="social-icons">TG Daily on Facebook</a></li>
 <li class="leaf"><a href="https://plus.google.com/109099617272000206503/" title="TG Daily on Google Plus" id="gp" class="social-icons">TG Daily on Google Plus</a></li>
@@ -103,15 +111,6 @@ var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s)
 <li class="leaf"><a href="https://www.google.com/producer/editions/CAowuJkM/tg_daily" title="TG Daily on Google Currents" id="gc" class="social-icons">TG Daily on Google Currents</a></li>
 <li class="leaf"><a href="/newsletter/subscriptions" title="TG Daily Newsletter" id="nl" class="social-icons">TG Daily Newsletter</a></li>
 <li class="leaf last"><a href="/search/google" title="TG Daily Search" id="cs" class="social-icons">TG Daily Search</a></li>
-</ul></div></div>
-<div id="block-menu-menu-extra-links" class="block block-menu"><div class="content"><ul class="menu"><li class="leaf first"><a href="http://uxui.tgdaily.com" title="">UX/UI</a></li>
-<li class="leaf"><a href="http://augmentedreality.tgdaily.com" title="">Augmented Reality</a></li>
-<li class="leaf"><a href="http://electricvehicle.tgdaily.com" title="">Electric Vehicle</a></li>
-<li class="leaf"><a href="http://smartphones.tgdaily.com" title="">Smartphones</a></li>
-<li class="leaf"><a href="http://neuroscience.tgdaily.com" title="">Neuroscience</a></li>
-<li class="leaf"><a href="http://robotics.tgdaily.com" title="">Robotics</a></li>
-<li class="leaf"><a href="http://semiconductors.tgdaily.com" title="">Semiconductors</a></li>
-<li class="leaf last"><a href="http://it4dev.tgdaily.com">IT4Dev</a></li>
 </ul></div></div>
 </div>
  <div id="content">
@@ -182,27 +181,27 @@ $(".story-content").fitVids();
 <div id="OA_posid_1"></div>
 <noscript><a target='_blank' href='http://vma.tgdaily.net/www/delivery/ck.php?n=e3fbfff'><img alt='' src='http://vma.tgdaily.net/www/delivery/avw.php?zoneid=2&amp;n=e3fbfff' /></a></noscript>
 </div>
-<script type="text/javascript">
+<script type="text/javascript" defer="">
 OA_show_banner(1);
 </script><div class="clear"></div></div></div>
-<div id="block-views-Popular_Articles-block_3" class="block block-views side-cell"><div class="content">     <div class="most-post odd first ">
-  <div class="most-title"><a href="/space-features/81330-when-is-a-comet-not-a-comet" target="_top">When is a comet not a comet?</a></div>
-  <div class="most-thumb"><div class="most-img"><a href="/space-features/81330-when-is-a-comet-not-a-comet" class="imagecache imagecache-tgniob-wideteaser imagecache-linked imagecache-tgniob-wideteaser_linked"><img src="http://img1.tgdaily.com/sites/default/files/imagecache/tgniob-wideteaser/stock/article_images/science/cometdual.jpg" alt="" title="" width="300" height="180" class="imagecache imagecache-tgniob-wideteaser"></a></div></div>
+<div id="block-views-Popular_Articles-block_3" class="block block-views side-cell"><div class="content">         <div class="most-post odd first ">
+  <div class="most-title"><a href="/space-features/88386-nasas-nustar-untangles-mystery-of-how-stars-explode" target="_top"> NASA's NuSTAR untangles mystery of how stars explode</a></div>
+  <div class="most-thumb"><div class="most-img"><a href="/space-features/88386-nasas-nustar-untangles-mystery-of-how-stars-explode" target="_top"><img src="http://img5.tgdaily.com/sites/default/files/imagecache/tgniob-wideteaser/stock/article_images/nustar1.jpg" alt="" title="" width="300" height="180" class="imagecache imagecache-tgniob-wideteaser"></a></div></div>
  </div>
-      <div class="most-post even  ">
-  <div class="most-title"><a href="/games-and-entertainment-features/81320-marvel-brings-us-the-first-muslim-superhero" target="_top">Marvel Brings Us the First Muslim Superhero</a></div>
-  <div class="most-thumb"><div class="most-img"><a href="/games-and-entertainment-features/81320-marvel-brings-us-the-first-muslim-superhero" class="imagecache imagecache-tgniob-wideteaser imagecache-linked imagecache-tgniob-wideteaser_linked"><img src="http://img3.tgdaily.com/sites/default/files/imagecache/tgniob-wideteaser/stock/kamala_khan_marvale_muslim_superhero.jpg" alt="" title="" width="300" height="180" class="imagecache imagecache-tgniob-wideteaser"></a></div></div>
+          <div class="most-post even  ">
+  <div class="most-title"><a href="/space-features/88396-nasas-curiosity-adds-reverse-driving-for-wheel-protection-on-mars" target="_top">NASA's Curiosity adds reverse driving for wheel protection on Mars</a></div>
+  <div class="most-thumb"><div class="most-img"><a href="/space-features/88396-nasas-curiosity-adds-reverse-driving-for-wheel-protection-on-mars" target="_top"><img src="http://img4.tgdaily.com/sites/default/files/imagecache/tgniob-wideteaser/stock/article_images/reversedriving.jpg" alt="" title="" width="300" height="180" class="imagecache imagecache-tgniob-wideteaser"></a></div></div>
  </div>
-      <div class="most-post odd  last">
-  <div class="most-title"><a href="/games-and-entertainment-features/81317-is-the-next-star-wars-looking-for-newcomers" target="_top">Is the Next Star Wars Looking For Newcomers? </a></div>
-  <div class="most-thumb"><div class="most-img"><a href="/games-and-entertainment-features/81317-is-the-next-star-wars-looking-for-newcomers" class="imagecache imagecache-tgniob-wideteaser imagecache-linked imagecache-tgniob-wideteaser_linked"><img src="http://img2.tgdaily.com/sites/default/files/imagecache/tgniob-wideteaser/stock/darth_vader_star_wars_vii.jpg" alt="" title="" width="300" height="180" class="imagecache imagecache-tgniob-wideteaser"></a></div></div>
+          <div class="most-post odd  last">
+  <div class="most-title"><a href="/hardware-features/88411-mele-x1000-supports-blu-ray-navigation-3d-video-playback" target="_top">Mele X1000 supports Blu-ray navigation, 3D video playback  </a></div>
+  <div class="most-thumb"><div class="most-img"><a href="/hardware-features/88411-mele-x1000-supports-blu-ray-navigation-3d-video-playback" target="_top"><img src="http://img5.tgdaily.com/sites/default/files/imagecache/tgniob-wideteaser/stock/article_images/melex100.jpg" alt="" title="" width="300" height="180" class="imagecache imagecache-tgniob-wideteaser"></a></div></div>
  </div>
  <div class="clear"></div></div></div>
 <div id="block-block-33" class="block block-block side-cell"><div class="content"><div class="ad">
 <div id="OA_posid_3"></div>
 <p><noscript><a target='_blank' href='http://vma.tgdaily.net/www/delivery/ck.php?n=5da94df'><img alt='' src='http://vma.tgdaily.net/www/delivery/avw.php?zoneid=3&amp;n=5da94df' /></a></noscript>
 </p></div>
-<script type="text/javascript">
+<script type="text/javascript" defer="">
 OA_show_banner(3);
 </script><div class="clear"></div></div></div>
 <div id="block-block-21" class="block block-block side-cell"><div class="content"><div class="ad">
@@ -230,7 +229,7 @@ OA_show_banner(2);
 <li class="menu-898"><a href="http://breakingmuscle.com/" title="Breaking Muscle">Fitness</a></li>
 <li class="menu-615 last"><a href="http://www.bestcovery.com" title="Bestcovery">Bestcovery</a></li>
 </ul></div>
-<div class="clear"></div><div id="copyrights"><p>©  2013 <a href="http://www.velummedia.com" title="Velum Medida">Velum Media</a>. All rights Reserved.</p><img src="/favicon.ico" width="1" height="1" alt="" class="hide"></div></div></div>
+<div class="clear"></div><div id="copyrights"><p>©  2014 <a href="http://www.velummedia.com" title="Velum Medida">Velum Media</a>. All rights Reserved.</p><img src="/favicon.ico" width="1" height="1" alt="" class="hide"></div></div></div>
 <div id="fb-root"></div>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
@@ -253,7 +252,7 @@ jQuery.extend(Drupal.settings, {"googleCSE":{"language":"en"}});
 //--><!]]>
 </script>
 <div id="block-block-10" class="block block-block"><div class="content"><div id="this_div_0" style="display:none;">
-<script type="text/javascript">
+<script type="text/javascript" defer="">
 OA_show_pos(0);
 </script>
 </div>
@@ -290,7 +289,18 @@ var oldonload=window.onload;window.onload=(typeof window.onload != "function") ?
 
 var pubid=101
 </script>
-<script>document.write('<script src="http://cdn3.infocc.com/handler.js?rnd='+Math.random()+'"><\/script>')</script><script src="http://cdn3.infocc.com/handler.js?rnd=0.5915700007127191"></script></div></div>
+<script>document.write('<script src="http://cdn3.infocc.com/handler.js?rnd='+Math.random()+'"><\/script>')</script><script src="http://cdn3.infocc.com/handler.js?rnd=0.9717324228968822"></script></div></div>
+<div id="block-tgd_ads-4" class="block block-tgd_ads"><div class="content"><!-- AD --><div class="ad" id="ad-kontera">  <!-- Kontera ContentLink -->
+  <script type="text/javascript">
+    var dc_UnitID = 14;
+    var dc_PublisherID = 123927;
+    var dc_AdLinkColor = '346200';
+    var dc_isBoldActive = 'no';
+    var dc_open_new_win = 'yes';
+    var dc_adprod='ADL';
+  </script>
+  <script type="text/javascript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js"></script>
+  <!-- Kontera ContentLink --></div><!-- /AD --></div></div>
 
 
 <script language="javascript" type="text/javascript" src="https://a248.e.akamai.net/chartbeat.download.akamai.com/102508/js/chartbeat.js"></script></body></html>
