--- a/l/ly/lyr/lyricsfreak.com.html
+++ b/l/ly/lyr/lyricsfreak.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the lyricsfreak.com privacy policy that was archived on 2013-07-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130727082327id_/http%3A//www.lyricsfreak.com/about/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lyricsfreak.com privacy policy that was archived on 2014-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140221095853id_/http%3A//www.lyricsfreak.com/about/privacy_policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>LyricsFreak - (A-Z Song Lyrics)</title>
 	<link href="/i/style.css" rel="stylesheet" type="text/css">
 	<link href="/i/test.css" rel="stylesheet" type="text/css">
@@ -120,7 +120,7 @@
 
 	<br><br></p><p>We may request personally identifying information from you in a variety of contexts. For example, you may provide such data to us if you: (1) complete an online registration form (e.g., registering for an account, various sign-up forms for receiving email newsletters, registering for special offers, entering a contest/sweepstakes or responding to a survey); (2) fill out an order form to request information; (3) register to participate in message boards and chat rooms (if any) and other community features; or (4) purchase any products or services from us or another Lyricsfreak.com business. 
 	<br><br></p><p>In such cases, the personally identifying information we request may include your name, email address, mailing address and zip code, phone number, and, where appropriate, a valid credit card number with expiration date (collectively, "Personal Information"). In addition, we may collect other non-personally identifying information such as your date of birth, gender, country of residence, language preference, hobbies and other information regarding your interaction with our site such as your viewing and listening habits, preferences and other customized activities in which you participate. Of course, you never have to answer any of the questions we ask you (nor choose to view or listen to any multimedia content or otherwise interact with our site), but refusal to do so may limit the products or services we can offer or provide to you. 
-	<br><br></p><p>When you provide Personal Information to us, we may use that data to create a "Profile Page” for you, which will be held in a database using reasonable security measures to protect the data from unauthorized access. Others outside Lyricsfreak.com will not be allowed to see the data on your Profile Page except with your consent (see below). If you register to set up an account, you will be able to access your Profile Page at any time in order to update your individual Personal Information listed therein (see below under "How Can You Correct or Review Your Personal Information?" for more details). 
+	<br><br></p><p>When you provide Personal Information to us, we may use that data to create a "Profile Page" for you, which will be held in a database using reasonable security measures to protect the data from unauthorized access. Others outside Lyricsfreak.com will not be allowed to see the data on your Profile Page except with your consent (see below). If you register to set up an account, you will be able to access your Profile Page at any time in order to update your individual Personal Information listed therein (see below under "How Can You Correct or Review Your Personal Information?" for more details). 
 
 	<br><br></p><p><b>How Can Your Personal Information Be Used?</b>
 
@@ -188,6 +188,6 @@
 			</div>
 		</div>
 	</div>
-<div class="footer"><a href="http://www.lyricsfreak.com/about/contact_us.htm">Contact Us</a> / <a href="http://www.lyricsfreak.com/about/privacy_policy.htm">Privacy Policy</a> / <a href="http://www.lyricsfreak.com/about/tos.htm">ToS</a> / LyricsFreak © 2010</div>
+<div class="footer"><a href="http://www.lyricsfreak.com/about/contact_us.php">Contact Us</a> / <a href="http://www.lyricsfreak.com/about/privacy_policy.htm">Privacy Policy</a> / <a href="http://www.lyricsfreak.com/about/tos.htm">ToS</a> / LyricsFreak © 2010</div>
 
 </div></body></html>
