--- a/s/su/sup/supportchoice.com.html
+++ b/s/su/sup/supportchoice.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the supportchoice.com privacy policy that was archived on 2013-05-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130525055019id_/http%3A//www.supportchoice.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the supportchoice.com privacy policy that was archived on 2014-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140221131537id_/http%3A//www.supportchoice.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class=" js no-flexbox flexbox-legacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head>
 		<!-- METATAGS -->
@@ -12,6 +12,8 @@
 		<meta http-equiv="cache-control" content="no-cache, must-revalidate">
 		<!-- CSS -->
 		<link href="/css/custom-theme/jquery-ui-1.8.18.custom.css" rel="stylesheet">
+		
+		
 			<!-- JAVASCRIPT -->
 		<!-- Jquery -->
 		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/js/jquery/jquery-1.7.1.min.js" language="javascript" type="text/javascript"></script>
@@ -21,9 +23,13 @@
 		<script src="/js/jquery/jquery-ui-1.8.18.custom.min.js" language="javascript" type="text/javascript"></script>
 		<!-- Jquery Mask -->
 		<script src="/js/jquery/jquery.maskedinput-1.3.min.js" language="javascript" type="text/javascript"></script>
+		<!-- Backbone -->
+		<script type="text/javascript" src="/js/underscore-min.js"></script>
+		<script type="text/javascript" src="/js/backbone-min.js"></script>
 		
-		<script src="/js/main.js?ver=2013-05-25_00:50:48" type="text/javascript"></script> <!--Add date like a param to avoid the cache -->
+		<script src="/js/main.js?ver=2014-02-21_07:15:37" type="text/javascript"></script> <!--Add date like a param to avoid the cache -->
 
+	
 		<!-- FIX FOR IE6 AND IE7 FOR HTML5 TAGS -->
 		<script src="/js/modernizr-2.5.3.js" type="text/javascript"></script>
 
@@ -46,7 +52,7 @@
 		<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
 		<!-- DINAMIC FROM FRAMEWORK -->
-					<script src="/chats/js/chat.js?ver=2013-05-25_00:50:48" type="text/javascript" language="javascript"></script><!--Add date like a param to avoid the cache -->
+					<script src="/chats/js/chat.js?ver=2014-02-21_07:15:37" type="text/javascript" language="javascript"></script><!--Add date like a param to avoid the cache -->
 			<script src="/js/jquery/spin.min.js" type="text/javascript" language="javascript"></script><style></style>
 		<script>
 			$.fn.spin = function(opts) {
@@ -66,8 +72,8 @@
 			};
 		</script>
 		<!-- DESIGN -->
-		<link href="/css/main.css?ver=2013-05-25_00:50:48" type="text/css" rel="stylesheet"> 
-			<link href="/chats/css/customer_chat.css?ver=2013-05-25_00:50:48" type="text/css" rel="stylesheet">
+		<link href="/css/main.css?ver=2014-02-21_07:15:37" type="text/css" rel="stylesheet"> 
+			<link href="/chats/css/customer_chat.css?ver=2014-02-21_07:15:37" type="text/css" rel="stylesheet">
 	
 			
 	<!-- INSERT THIS CODE IN YOUR PAGE HEAD ON EVERY PAGE -->
@@ -77,10 +83,10 @@
 		 var _ibp_formatting = true;
 		 var _ibp_keyword_set = 44454;
 	</script>
+</head><body><a href="https://plus.google.com/113376642181694972244" rel="publisher">
+	
 
-	</head>
-
-	<body>
+	
 	<div style="display: none;">
 	<!-- INSERT THIS CODE IN YOUR PAGE WHERE YOU WANT A PHONE NUMBER TO DISPLAY -->
 	<script type="text/JavaScript" src="https://secure.ifbyphone.com/js/keyword_replacement.js"></script>
@@ -106,9 +112,9 @@
 			
 			</div>
 	
-		<header id="topHeader">
-			<div class="body">
-				<h1 class="mainLogo">SupportChoice<a href="/"></a></h1>
+		</a><header id="topHeader"><a href="https://plus.google.com/113376642181694972244" rel="publisher">
+			</a><div class="body"><a href="https://plus.google.com/113376642181694972244" rel="publisher">
+				</a><h1 class="mainLogo"><a href="https://plus.google.com/113376642181694972244" rel="publisher">SupportChoice</a><a href="/"></a></h1>
 				<nav class="top">
 					<ul class="load_view">
 										<li><a class="last" href="/login">Login</a></li>
@@ -154,7 +160,7 @@
 	<div class="body">
     	<h1 class="left">Privacy Agreement</h1>
     	<div class="right">
-			<table><tbody><tr><td s=""><p><span class="comment">Teddy was more than exceptional. He was pleasant and diligent to solve my scanning problem. I assume #5 is the best number, as he is the best.</span><br>- Judith S.</p></td></tr></tbody></table>
+			<table><tbody><tr><td s=""><p><span class="comment">I love SupportChoice! They fixed my computer in under 30 minutes. Highly recommended!</span><br>- Sandra M.</p></td></tr></tbody></table>
       	</div>
    	</div>
 </section>
@@ -324,7 +330,10 @@
 		</footer>
 		<!-- DIALOGS -->
 		<div id="dialog" title="SupportChoice"></div>
-				<div id="loading"></div>
+				<div style="height: auto; left: 50%; margin: 0px 0px 0px -585px; position: fixed; top: 10px;">
+			<div id="SCApp" class="container"></div>
+		</div>
+		<div id="loading"></div>
 	
 
 <script language="javascript" type="text/javascript">
