--- a/w/wi/wit/witmart.com.html
+++ b/w/wi/wit/witmart.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the witmart.com privacy policy that was archived on 2013-07-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130702232244id_/https%3A//privacy-policy.truste.com/verified-policy/www.witmart.com) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the witmart.com privacy policy that was archived on 2014-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140221142819id_/https%3A//privacy-policy.truste.com/verified-policy/www.witmart.com) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us" lang="en-us"><head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -43,7 +43,7 @@
 <p>Effective on May 17, 2011
 </p>
 
-<p>This privacy statement describes how ZBJ Network Inc collects and uses the personal information you provide on our Web site: <a href="https://www.witmart.com">www.witmart.com
+<p>This privacy statement describes how ZBJ Network Inc collects and uses the personal information you provide on our Web site: <a href="//www.witmart.com">www.witmart.com
 </a>.
 	It also describes the choices available to you regarding our use of your personal information and how you can access and update this
 	information.</p>
@@ -334,6 +334,13 @@
 		your information.
 		We encourage you to read that privacy statement before providing your information.</p>
 
+    <p>
+        We will retain your information for as long as your account is active or as needed to provide you services.
+        If you wish to cancel your account or request that we no longer use your information to provide you services contact us at <a href="mailto:service@witmart.com">service@witmart.com</a>.
+        We will retain and use your information as necessary to comply with our legal obligations, resolve disputes, and enforce our agreements.
+    </p>
+
+
 
 <!-- Security Disclosure 4 -->
 
@@ -400,7 +407,7 @@ We encourage you to carefully read the privacy statement of any Web site you vis
 	<div>Phone: <span class="tel">877 948 6278</span></div>
 </div>
 	</div>
-	<a id="s" href="/click-to-verify/www.witmart.com?referer=witmart.com"><img src="/verified-policy/seal.gif" alt="TRUSTe Verified"></a>
+	<a id="s" href="/click-to-verify/www.witmart.com?referer="><img src="/verified-policy/seal.gif" alt="TRUSTe Verified"></a>
 </div>
 
 <script type="text/javascript">
