--- a/s/sp/spl/splashdata.com.html
+++ b/s/sp/spl/splashdata.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the splashdata.com privacy policy that was archived on 2013-12-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131207151621id_/http%3A//privacy-policy.truste.com/verified-policy/www.splashdata.com) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the splashdata.com privacy policy that was archived on 2014-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140221174930id_/http%3A//privacy-policy.truste.com/verified-policy/www.splashdata.com) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us" lang="en-us"><head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -321,6 +321,13 @@
 		If you choose to use a third party payment option to pay for your order, its privacy statement and security practices will apply to
 		your information.
 		We encourage you to read that privacy statement before providing your information.</p>
+
+    <p>
+        We will retain your information for as long as your account is active or as needed to provide you services.
+        If you wish to cancel your account or request that we no longer use your information to provide you services contact us at <a href="mailto:sales@splashdata.com">sales@splashdata.com</a>.
+        We will retain and use your information as necessary to comply with our legal obligations, resolve disputes, and enforce our agreements.
+    </p>
+
 
 
 <!-- Security Disclosure 4 -->
