--- a/c/co/con/configserver.com.html
+++ b/c/co/con/configserver.com.html
@@ -1,238 +1,136 @@
-<!--The following is the downloaded HTML source of the configserver.com privacy policy that was archived on 2013-09-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130901230942id_/http%3A//www.configserver.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the configserver.com privacy policy that was archived on 2014-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140221193716id_/http%3A//www.configserver.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- #BeginTemplate "Templates/main.dwt" --><head>
-<!-- #BeginEditable "doctitle" -->
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- #BeginEditable "doctitle" -->
 <title>Way to the Web Privacy Policy</title>
-<!-- #EndEditable -->
-<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type">
-<!-- #BeginEditable "head" -->
-<!-- #EndEditable -->
-<link href="wum.css" rel="stylesheet" type="text/css">
-<link href="/favicon.ico" rel="shortcut icon">
-<style type="text/css">
-
-.style1 {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: medium;
-	color: #0000000;
-}
-</style>
+	<!-- #EndEditable -->
+	<!-- #BeginEditable "head" -->
+	<!-- #EndEditable -->
+	<link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
+	<link href="configserver.css" rel="stylesheet" type="text/css">
+	<link href="wum.css" rel="stylesheet" type="text/css">
+	<link href="favicon.ico" rel="shortcut icon">
 </head>
-
-<body bgcolor="#FFFFFF" text="#000000">
-
-<table align="center" bgcolor="#F4F4EA" border="0" cellpadding="4" cellspacing="8" style="border: 1px solid #A6C150" width="98%">
+<body>
+	<table class="header-box">
 	<tbody><tr>
-		<td nowrap="" valign="middle"><a href="chirpy.html">
-		<img alt="Who is Chirpy?" border="0" height="60" src="images/logo.gif" width="60"></a></td>
-		<td align="left" width="100%"><strong>
-		<font color="#A6C150" face="Verdana, Arial, Helvetica, sans-serif" size="5">
-		ConfigServer Services</font></strong><br><strong>
-		<font color="#999999" face="Verdana, Arial, Helvetica, sans-serif" size="2">
-		cPanel Server Services from Way to The Web Ltd</font></strong></td>
+	<td class="header-logo-td">
+		<a href="index.html">
+		<img class="header-logo" src="images/logo.gif" alt="Logo" style="border-style:none"></a>
+	</td>
+	<td class="header-text-td">
+		<span class="header-text">ConfigServer Services</span><br>
+		<span class="subheader-text"> Server Management Services from Way to The 
+		Web Ltd</span>
+	</td>
 	</tr>
-</tbody></table>
-<table align="center" border="0" cellpadding="4" cellspacing="10" width="98%">
-	<tbody><tr class="text">
-		<td nowrap="" style="border-left: 2px solid #990000" width="14%"><strong>
-		<a href="index.html">Home</a></strong></td>
-		<td nowrap="" style="border-left: 2px solid #990000" width="15%"><strong>
-		<a href="/blog">Site Blog</a></strong></td>
-		<td nowrap="" style="border-left: 2px solid #990000" width="14%"><strong>
-		<a href="cp/index.html">Services</a></strong></td>
-		<td nowrap="" style="border-left: 2px solid #990000" width="14%"><strong>
-		<a href="support.html">Support</a></strong></td>
-		<td nowrap="" style="border-left: 2px solid #990000" width="15%"><strong>
-		<a href="terms.html">Terms &amp; Conditions</a></strong></td>
-		<td nowrap="" style="border-left: 2px solid #990000" width="14%"><strong>
-		<a href="privacy.html">Privacy Policy</a></strong></td>
-		<td nowrap="" style="border-left: 2px solid #990000" width="14%"><strong>
-		<a href="contact.html">Contact Us </a></strong></td>
-	</tr>
-</tbody></table>
-<table align="center" bgcolor="#F4F4EA" border="0" cellpadding="0" cellspacing="0" style="border: 1px solid #A6C150" width="98%">
-	<tbody><tr>
-		<td style="border-right: 1px solid #A6C150" valign="top" width="200">
-		<table border="0" cellpadding="4" cellspacing="8" width="100%">
-			<tbody><tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/cpanel.html">cPanel Server Services</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/mailscanner.html">cPanel MailScanner Service</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/recovery.html">Server Recovery Service</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/exploit.html">Exploit Scan Service</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/general.html">General Server Management</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/msfe.html">cPanel MailScanner Front-End</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="http://www.configserver.com/sfaq/index.php">Services FAQ</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="orderinfo.html">Ordering Terms &amp; Conditions </a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-top: 1px dotted #CCCCCC; border-bottom: 1px dotted #CCCCCC">&nbsp;</td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="http://forum.configserver.com/">ConfigServer Scripts Forum</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/cxs.html">ConfigServer eXploit Scanner</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/csf.html">ConfigServer Firewall</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/cmc.html">ConfigServer ModSec Control</a></strong></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/cse.html">ConfigServer Explorer </a></strong>
-				</td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/cmq.html">ConfigServer Mail Queues </a></strong>
-				</td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000"><strong>
-				<a href="cp/cmm.html">ConfigServer Mail Manage </a></strong>
-				</td>
-			</tr>
-			<tr>
-				<td class="text" style="border-top: 1px dotted #CCCCCC; border-bottom: 1px dotted #CCCCCC">&nbsp;</td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000">
-				<a href="free/fail.html">Why you should use <b>:fail:</b></a></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000">
-				<a href="free/spammers.html">Searching for Spammers</a></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000">
-				<a href="cp/vuln.php">Latest Vulns &amp; Viruses</a></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-top: 1px dotted #CCCCCC; border-bottom: 1px dotted #CCCCCC">&nbsp;</td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000">
-				<a href="free/mailscanner.html">Free MailScanner Installer</a></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000">
-				<a href="free/clamav.html">Free ClamAV install for MS</a></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000">
-				<a href="cp/upgrade.html">Upgrading MS and ClamAV </a></td>
-			</tr>
-			<tr>
-				<td class="text" style="border-top: 1px dotted #CCCCCC; border-bottom: 1px dotted #CCCCCC">&nbsp;</td>
-			</tr>
-			<tr>
-				<td class="text" style="border-left: 2px solid #990000">
-				<a href="http://www.waytotheweb.com" target="_blank">Way to the 
-				Web Limited</a></td>
-			</tr>
-		</tbody></table>
-		</td>
-		<td bgcolor="#FFFFFF" valign="top">
-		<table border="0" cellpadding="8" cellspacing="0" width="100%">
-			<tbody><tr>
-				<td>
-				<div class="text">
-					<!-- #BeginEditable "Body" --> 
+	</tbody></table>
+	<table class="header-links">
+	<tbody><tr><td>
+	<a class="button" href="index.html">Home</a>
+	<div class="nav">
+	<ul>
+		<li><a href="#">Services 
+		<img src="images/dropdown.png" alt="dropdown" style="vertical-align:middle; border-style:none"></a>
+			<ul>
+			<li>
+				<div><a class="drop-a" href="cp/cpanel.html">cPanel Server Service</a></div>
+				<div><a class="drop-a" href="cp/mailscanner.html">cPanel MailScanner Service</a></div>
+				<div><a class="drop-a" href="cp/exploit.html">cPanel Exploit Scan Service</a></div>
+			</li>
+			</ul>
+		</li>
+	</ul></div>
+	<div class="nav">
+	<ul>
+		<li><a href="#">Scripts 
+		<img src="images/dropdown.png" alt="dropdown" style="vertical-align:middle; border-style:none"></a>
+			<ul>
+			<li>
+				<div><a class="drop-a" href="cp/cxs.html">Configserver Exploit Scanner</a></div>
+				<div><a class="drop-a" href="cp/csf.html">ConfigServer Security &amp; Firewall</a></div>
+				<div><a class="drop-a" href="cp/cmc.html">ConfigServer ModSecurity Control</a></div>
+				<div><a class="drop-a" href="cp/cmm.html">ConfigServer Mail Manage</a></div>
+				<div><a class="drop-a" href="cp/cmq.html">ConfigServer Mail Queues</a></div>
+				<div><a class="drop-a" href="cp/cse.html">ConfigServer Explorer</a></div>
+				<div><a class="drop-a" href="cp/msfe.html">ConfigServer MSFE</a></div>
+				<div><a class="drop-a" href="free/mailscanner.html">MailScanner Installer</a></div>
+			</li>
+			</ul>
+		</li>
+	</ul></div>
+	<a class="button" href="http://blog.configserver.com">Blog</a>
+	<a class="button" href="http://forum.configserver.com">Forum</a>
+	<a class="button" href="support.html">Support</a>
+	</td></tr>
+	</tbody></table>
+	<table class="main">
+	<tbody><tr><td>
+	<!-- #BeginEditable "Body" -->
                         <p class="heading"> Privacy Policy</p>
                         <p class="std">We at Way to the Web Limited take your 
-                          concerns about privacy seriously. We do not provide 
-                          any of your details to any third party, unless required 
-                          to by law. All emails, transactions and data that we 
-                          have is treated as confidential at all times. Here is 
-                          a breakdown of the information that we keep:</p>
+						concerns about privacy seriously. We do not provide any 
+						of your details to any third party, unless required to 
+						by law. All emails, transactions and data that we have 
+						is treated as confidential at all times. Here is a 
+						breakdown of the information that we keep:</p>
                         <ul>
                           <li class="std"><span class="subhead">Website:</span><br>
-                            When you browse our website your IP address, the
-                              time  and duration of your visit, the web browser
-                              you are  using, and the pages you view are logged.
-                              This information  is used to compile statistical
-                              reports about how you  use our website and ultimately
-                              used to improve your  browsing experience.<br>
+                            When you browse our website your IP address, the 
+						  time and duration of your visit, the web browser you 
+						  are using, and the pages you view are logged. This 
+						  information is used to compile statistical reports 
+						  about how you use our website and ultimately used to 
+						  improve your browsing experience.<br>
                               <br>
                           </li>
                           <li><span class="subhead">HelpDesk:</span><br>
                             <span class="std"> All information that you provide 
-                            on the online HelpDesk is performed securely and encrypted 
-                            via SSL between your browser and the server. No 
-                            updates  to HelpDesk Support Requests 
-                            are emailed to you, just notification messages. All this information is stored 
-                            to provide you with the best support, help and advice 
-                            that we can give you.<br>
+						  on the online HelpDesk is performed securely and 
+						  encrypted via SSL between your browser and the server. 
+						  No updates to HelpDesk Support Requests are emailed to 
+						  you, just notification messages. All this information 
+						  is stored to provide you with the best support, help 
+						  and advice that we can give you.<br>
                             <br>
                             </span></li>
                           <li><span class="subhead"> Purchase:<br>
-                            </span><span class="std">When you purchase a service or product 
-                            from us, we store information about you that is required 
-                            to verify, validate, process and maintain your order. 
-                            This includes your name and contact details together 
-                            with your payment method details. Data collected at 
-                            the time of your order within our online store is 
-                            transferred securely and encrypted via SSL between 
-                            your browser and our server. Any credit card information 
-                            is only  stored temporarily and is in an encrypted 
-                            format.</span></li>
+                            </span><span class="std">When you purchase a service 
+						  or product from us, we store information about you 
+						  that is required to verify, validate, process and 
+						  maintain your order. This includes your name and 
+						  contact details together with your payment method 
+						  details. Data collected at the time of your order 
+						  within our online store is transferred securely and 
+						  encrypted via SSL between your browser and our server. 
+						  We do not store any credit card information as this is 
+						  handled by third-party processors.</span></li>
                         </ul>
-                        <!-- #EndEditable --></div>
-				</td>
-			</tr>
-		</tbody></table>
-		</td>
-	</tr>
-</tbody></table>
-<br>
-<table align="center" bgcolor="#F4F4EA" border="0" cellpadding="4" cellspacing="0" style="border: 1px solid #A6C150" width="98%">
-	<tbody><tr>
-		<td align="left">
-		<div align="center">
-			<strong>
-			<font color="#A6C150" face="Verdana, Arial, Helvetica, sans-serif" size="2">
-			©1998-2012, </font>
-			<font face="Verdana, Arial, Helvetica, sans-serif" size="2">
-			<a href="http://www.waytotheweb.com"><font color="#A6C150">Way to the 
-			Web Limited</font></a></font></strong><font face="Verdana, Arial, Helvetica, sans-serif"><br>
-			<font size="1">ConfigServer, Way to the Web, WebUMake and WebUMake Hosting 
-			are trademarks of Way to the Web Limited</font> </font></div>
-		</td>
-	</tr>
-</tbody></table>
-
-
+	<!-- #EndEditable -->
+	</td></tr>
+	</tbody></table>
+	<table class="footer-links">
+	<tbody><tr><td>
+	<a class="button" href="orderinfo.html">Ordering</a>
+	<a class="button" href="sfaq/index.php">Sales FAQ</a>
+	<a class="button" href="techfaq/faqlist.php">Support FAQ</a>
+	<a class="button" href="terms.html">T&amp;C's</a>
+	<a class="button" href="privacy.html">Privacy</a>
+	<a class="button" href="contact.html">Contact</a>
+	</td></tr>
+	</tbody></table>
+	<table class="footer-box">
+	<tbody><tr><td>
+		<span class="footer-text">©1998-2014, <a href="http://www.waytotheweb.com" target="_blank">
+		Way to the Web Limited</a></span><br>
+		<span class="subfooter-text">"ConfigServer" and "Way to the Web" are 
+		trademarks of Way to the Web Limited</span>
+	</td></tr>
+	</tbody></table>
 
 <!-- #EndTemplate -->
-
 
 </body></html>
