--- a/b/br/bre/brevardschools.org.html
+++ b/b/br/bre/brevardschools.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the brevardschools.org privacy policy that was archived on 2013-10-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131004085254id_/http%3A//www.brevardschools.org/web_statement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brevardschools.org privacy policy that was archived on 2014-02-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140222124202id_/http%3A//brevardschools.org/web_statement.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="keywords" content="disclaimer, security, link, privacy">
