--- a/f/fr/fre/freegames.ws.html
+++ b/f/fr/fre/freegames.ws.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freegames.ws privacy policy that was archived on 2013-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221154712id_/http%3A//www.freegames.ws/freegames_legal/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freegames.ws privacy policy that was archived on 2014-02-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140222155336id_/http%3A//freegames.ws/freegames_legal/privacy_policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Computer Games at freegames.ws - Play online arcade, board, puzzles, 3D car games for free</title>
