afterdownload.com (archived on 2014-02-23)
{
  "alexa_rank": 130457,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7156,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 16.19,
  "homepage_snapshot_redirected_domain": "afterdownload.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140306151107id_/http://www.afterdownload.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140306151107id_/http%3A//afterdownload.com",
  "interval": "2014_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "afterdownload.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140223073956id_/http%3A//www.afterdownload.com/pages/privacy",
  "policy_title": "AfterDownload - Monetize your After Download pages, Maximize your site revenue potential!",
  "policy_url": "afterdownload.com/pages/privacy",
  "sha1": "eec081dcc291c514773289d092653f1851ad1683",
  "simhash": 1767415573501158233,
  "simhash_updated": false,
  "site_hostname": "afterdownload.com",
  "site_url": "http://afterdownload.com",
  "smog": 16.65,
  "strict_updated": false,
  "timestamp": "20140223073956",
  "word_count": 1179,
  "year": 2014
}

--- a/a/af/aft/afterdownload.com.html
+++ b/a/af/aft/afterdownload.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the afterdownload.com privacy policy that was archived on 2013-08-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130807042054id_/http%3A//www.afterdownload.com/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the afterdownload.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223073956id_/http%3A//www.afterdownload.com/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<!-- Use IE7 mode -->
@@ -306,7 +306,7 @@
             </ul>
             
             <div class="span-2 floatRight">
-				                	<a href="http://admin.afterdownload.com/#login"><img src="http://cdn.afterdownload.com/images/site/v2/login_icon.jpg"></a>              	                
+		                	<a href="http://admin.afterdownload.com/#login"><img src="http://cdn.afterdownload.com/images/site/v2/login_icon.jpg"></a>		                
                 <div class="popUp">
                     <div id="loginBox">
                     <form name="loginFormV2" id="loginFormV2" method="post" action="/login">
@@ -342,7 +342,8 @@
             <div class="clear"></div>
         </div>
         <div class="clear"></div>
-    </div>		<div class="content">
+    </div>
+		<div class="content">
 <p><strong>Privacy Policy</strong></p>
 <p>We, After Download Ltd., treasure the privacy of the users of afterdownload.com (the "<strong>Website</strong>") and the users of the our proprietary ad serving platform (the "<strong>Platform</strong>") and that is why we made every effort to create a service that adopts adequate privacy standards as set forth below.</p>
 
@@ -420,7 +421,7 @@ If you have any questions about this Policy, please contact us at <a style="colo
         <div class="container">
             <div class="span-3">
                 <a href="#"><img src="/images/site/v2/footer_logo.png" alt="AfterDownload"></a><br>
-                <span class="copyrightTxt">© 2011 AfterDownload LTD.</span>
+                <span class="copyrightTxt">© 2014 AfterDownload LTD.</span>
             </div>
             <div class="span-10">
                 <ul class="footerLinks">
