jonasbrothersfanfictionarchive.com (archived on 2014-02-23)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;entertainment",
  "char_count": 3747,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.28,
  "homepage_snapshot_redirected_domain": "jonasbrothersfanfictionarchive.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140517205027id_/http://jonasbrothersfanfictionarchive.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140517205027id_/http%3A//jonasbrothersfanfictionarchive.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "jonasbrothersfanfictionarchive.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140223081914id_/http%3A//www.jonasbrothersfanfictionarchive.com/viewpage.php%3Fpage%3Dprivacy",
  "policy_title": "Jonas Brothers Fanfiction Archive :: Your #1 source for Jonas Brothers Fan Fiction",
  "policy_url": "jonasbrothersfanfictionarchive.com/viewpage.php?page=privacy",
  "sha1": "78b80517dd21c60b666c7f4b2f27a0cfe108279b",
  "simhash": 7418789011683744552,
  "simhash_updated": false,
  "site_hostname": "jonasbrothersfanfictionarchive.com",
  "site_url": "http://jonasbrothersfanfictionarchive.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20140223081914",
  "word_count": 596,
  "year": 2014
}

--- a/j/jo/jon/jonasbrothersfanfictionarchive.com.html
+++ b/j/jo/jon/jonasbrothersfanfictionarchive.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the jonasbrothersfanfictionarchive.com privacy policy that was archived on 2013-09-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130921125052id_/http%3A//www.jonasbrothersfanfictionarchive.com/viewpage.php%3Fpage%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jonasbrothersfanfictionarchive.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223081914id_/http%3A//www.jonasbrothersfanfictionarchive.com/viewpage.php%3Fpage%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><title>Jonas Brothers Fanfiction Archive :: Your #1 source for Jonas Brothers Fan Fiction</title>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><script language="javascript" type="text/javascript" src="includes/javascript.js"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script language="javascript" type="text/javascript" src="includes/javascript.js"></script>
 <link rel="alternate" type="application/rss+xml" title="Jonas Brothers Fanfiction Archive RSS Feed" href="rss.php"><script language="javascript" type="text/javascript" src="tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
 	<script language="javascript" type="text/javascript"><!--
 	tinyMCE.init({ 
@@ -200,21 +200,7 @@ ch_color_bg = "FFFFFF";
 </div>
 </div>
 <div id="footer">
-<div align="center"><p>
-<script type="text/javascript">
-ch_client = "tevee123";
-ch_width = 728;
-ch_height = 90;
-ch_type = "mpu";
-ch_sid = "jobros";
-ch_color_site_link = "FF8421";
-ch_color_title = "FF8421";
-ch_color_border = "FFFFFF";
-ch_color_text = "000000";
-ch_color_bg = "FFFFFF";
-</script>
-<script src="http://scripts.chitika.net/eminimalls/amm.js" type="text/javascript">
-</script></p>
+<div align="center">
 <p></p><p>All publicly recognizable characters, settings, etc. are the property of their respective owners.  This website is not affiliated with Hollywood Records, Disney, or any other of it's affiliates.  No money is being made.  No copyright infringement intended.&nbsp;Some Icons by <a href="http://p.yusukekamiyamane.com/">Yusuke Kamiyamane</a></p><br><br>
 <a href="viewpage.php?page=tos" title="Terms of Service">Terms of Service</a> | <a href="viewpage.php?page=rules" title="Rules">Rules</a> | <a href="contact.php" title="Contact Us">Contact Us</a> | <a href="http://www.jonasbrothersfanfictionarchive.com/viewpage.php?page=privacy" title="Privacy Policy" id="current">Privacy Policy</a> | <br>
 Skin created by <a href="http://www.made-by-kali.com">Kali</a> - Image from <a href="http://www.nickjonline.com/">Nick J Online</a></div>
@@ -232,5 +218,29 @@ var infolinks_pid = 1763885;
 var infolinks_wsid = 1;
 </script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
+<!-- Quantcast Tag -->
+<script type="text/javascript">
+var _qevents = _qevents || [];
+
+(function() {
+var elem = document.createElement('script');
+elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
+elem.async = true;
+elem.type = "text/javascript";
+var scpt = document.getElementsByTagName('script')[0];
+scpt.parentNode.insertBefore(elem, scpt);
+})();
+
+_qevents.push({
+qacct:"p-ps6u6ULeK5TsK"
+});
+</script>
+
+<noscript>
+<div style="display:none;">
+<img src="//pixel.quantserve.com/pixel/p-ps6u6ULeK5TsK.gif" border="0" height="1" width="1" alt="Quantcast"/>
+</div>
+</noscript>
+<!-- End Quantcast tag -->
 
 </body></html>
