programsbase.com (archived on 2014-02-27)
{
  "alexa_rank": 87432,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3099,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.57,
  "homepage_snapshot_redirected_domain": "programsbase.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140223174552id_/http://programsbase.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140223174552id_/http%3A//programsbase.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "programsbase.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140227083414id_/http%3A//www.programsbase.com/privacy.php",
  "policy_title": "ProgramsBase.com Privacy Policy",
  "policy_url": "programsbase.com/privacy.php",
  "sha1": "5833c99f0abce4e95d1ebd998f8152e3e44aa6e4",
  "simhash": 17197548573076695368,
  "simhash_updated": false,
  "site_hostname": "programsbase.com",
  "site_url": "http://programsbase.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20140227083414",
  "word_count": 485,
  "year": 2014
}

--- a/p/pr/pro/programsbase.com.html
+++ b/p/pr/pro/programsbase.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the programsbase.com privacy policy that was archived on 2013-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131127065409id_/http%3A//www.programsbase.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the programsbase.com privacy policy that was archived on 2014-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140227083414id_/http%3A//www.programsbase.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>ProgramsBase.com Privacy Policy</title>
@@ -60,16 +60,12 @@ $( "#dialog" ).dialog();
 </script>
 
 
-</head><body><div id="dialog" title="Like us on Facebook">
-<center>
-<iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fprogramsbase&amp;width=292&amp;height=258&amp;show_faces=true&amp;colorscheme=light&amp;stream=false&amp;show_border=true&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:285px; height:258px;" allowtransparency="true"></iframe></center>
-</div>
 
 
 
+</head>
 
-
-
+<body>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
